tests/baselines/reference/parserWhileStatement1.d.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserWhileStatement1.d.ts (2 errors) ====
    while (e) {
    ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
           ~
!!! error TS2304: Cannot find name 'e'.
    }